25-cert-manager-ingress/05-hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: hello.pereirajean.com
    http:
        paths:
        - pathType: Exact
          path: "/"
          backend:
            service:
              name: hello-v1-svc
              port: 80
