25-cert-manager-ingress/08.1-prod-hello-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - hello.pereirajean.com
    secretName: hello-tls
  rules:
  - host: hello.pereirajean.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hello-v1-svc
            port:
              number: 80
